# Flight-Scribe

./: .gitignore  Cargo.toml  README.md  package-lock.json
src/: main.rs
src/gui/: add_waypoint.rs  flightplan.rs  logger.rs  menu_bar.rs  mod.rs  tod.rs  waypoint.rs  wpt_solver.rs
